--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+  <head></head>
+  <body>
 <script>
-location.href = "html/default.html"
+location.href = "/bikehub/html/default.html"
 </script>
+    </body>
+      </html>
